every thing is fix except leitnerbox logical

--- a/Authentication_App/templates/Authentication_App/login.html
+++ b/Authentication_App/templates/Authentication_App/login.html
@@ -44,7 +44,7 @@ a {
 
               <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">ثبت</button>
               <hr class="my-4">
-              <a href="{% url 'Authentication_App:signup' %}"  style="float: right;  font-size: 0.8em;">قبلا ثبت نام نکرده ام</a>
+              <a href="{% url 'Authentication_App:signup' %}"  style="float: right;  font-size: 0.8em; color: #7335b7;">قبلا ثبت نام نکرده ام</a>
             </form>
           </div>
         </div>
