--- a/Play_App/templates/Play_App/word.html
+++ b/Play_App/templates/Play_App/word.html
@@ -31,13 +31,13 @@ active
                         <div class="row g-3">
                             <div class="col-12">
                                 <div class="form-floating">
-                                    Front Word<input name="front_word" type="text" class="form-control" id="subject" placeholder="" >
+                                    Front Word<input name="front_word" type="text" class="form-control" id="subject" placeholder="Indirectly refer to the meaning">
                                     <label for="subject"></label>
                                 </div>
                             </div>
                             <div class="col-12">
                               <div class="form-floating">
-                                  Back Word<input name="back_word" type="text" class="form-control" id="subject" placeholder="" >
+                                  Back Word<input name="back_word" type="text" class="form-control" id="subject" placeholder="main word" >
                                   <label for="subject"></label>
                               </div>
                             </div>  
