--- a/templates/common.html
+++ b/templates/common.html
@@ -44,7 +44,17 @@
     font-family:tanha !important;
   }
 
+  .footer_container {
+    padding-top: 30px;
+  }
 
+  @media (max-width: 768px) {
+    .my-custom-btn {
+        display: block;
+        margin: 0 auto; /* Centers the button horizontally */
+        text-align: center; /* Centers the text in the button */
+    }
+  }  
 {% block style %}
 {% endblock style %}
 
@@ -71,31 +81,46 @@
   
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav">
+
                 <li class="nav-item {% block index_active %} {% endblock index_active %}">
                   <a class="nav-link" href="{% url 'Home_App:index' %}">صفحه اصلی <span class="sr-only">(current)</span></a>
                 </li>
+
                 <li class="nav-item {% block about_active %} {% endblock about_active %}">
                   <a class="nav-link" href="{% url 'Home_App:about' %}"> راهنما</a>
                 </li>
+                
+                {% if request.user.is_authenticated %}
                 <li class="nav-item {% block service_active %} {% endblock service_active %}">
                   <a class="nav-link" href="{% url 'Play_App:game' %}">شروع بازی</a>
                 </li>
+                {% else %}
+                <li class="nav-item">
+                  <a class="nav-link" onclick=RegisterNotification()>شروع بازی</a>
+                </li>
+                {% endif %}
+                
+                {% if request.user.is_authenticated %}
                 <li class="nav-item {% block word_active %} {% endblock word_active %}">
                   <a class="nav-link" href="{% url 'Play_App:add_word' %}">اضافه کردن کلمات</a>           
                 </li>
+                {% else %}
+                <li class="nav-item">
+                  <a class="nav-link" onclick=RegisterNotification()>اضافه کردن کلمات</a>           
+                </li>
+                {% endif %}
+
                 {% if user.is_superuser %}
                 <li class="nav-item">
                   <a class="nav-link" href="/admin">پنل ادمین</a>           
                 </li>   
                 {% endif %}             
               </ul>
-              <div class="quote_btn-container">
                 {% if request.user.is_authenticated %}
-                  <a href="{% url 'Authentication_App:profile' %}" class="quote_btn">{{ request.user.full_name }}</a>
+                  <a href="{% url 'Authentication_App:profile' %}" class="btn btn-warning my-custom-btn">{{ request.user.full_name }}</a>
                 {% else %}
-                  <a href="{% url 'Authentication_App:login' %}" class="quote_btn">حساب کاربری</a>
+                  <a href="{% url 'Authentication_App:login' %}" class="btn btn-warning my-custom-btn">حساب کاربری</a>
                 {% endif %}              
-              </div>
             </div>
           </nav>
         </div>
@@ -131,52 +156,17 @@
         </div>
         <div class="col-md-6 col-lg-3 ">
             <h4>
-            ثبت نظر شما
+            پشتیبانی
             </h4>
             <form action="#">
-            <input type="text" placeholder="کامنت ..." dir="rtl" />
-            <button type="submit">
-                ثبت
-            </button>
+            <input type="text" placeholder="+98-900-9896-130" style="text-align: center;" disabled />
             </form>
         </div>
         <div class="col-md-6 col-lg-3 mb-0 ml-auto">
-            <div class="info_contact">
-              <div class="contact_link_box">
-              </div>
-            </div>
-            <div class="info_social">
-            <a href="">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-            <a href="">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-            </a>
-            </div>
-        </div>
         </div>
     </div>
     </section>
-
     <!-- end info section -->
-
-    <!-- end info section -->
-
-    <!-- footer section -->
-    <footer class="footer_section">
-      <div class="container">
-        <p>
-          &copy; <span id="displayYear"></span> 
-        </p>
-      </div>
-    </footer>
-    <!-- footer section -->
   </div>
 
   <!-- jQery -->
@@ -191,6 +181,9 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
   <!-- End Google Map -->
   <script>
+    function RegisterNotification() {
+      alert("اول باید حساب کاربری بسازید تا بتوانید از لایتنر باکس استفاده کنید 😘");
+    }
     {% block js %}
     {% endblock js %}
   </script>
