finish all the develop

--- a/Play_App/templates/Play_App/edit_word.html
+++ b/Play_App/templates/Play_App/edit_word.html
@@ -40,14 +40,14 @@
                             <div class="col-6">
                                 <div class="form-floating">
                                     Day
-                                    <input name="back_word_day" type="number" class="form-control" id="back_word_day" value="{{ word_info.day }}" min="1" max="30" required>
+                                    <input name="day" type="number" class="form-control" id="back_word_day" value="{{ word_info.day }}" min="1" max="30" required>
                                     <label for="back_word_day"></label>
                                 </div>
                             </div>
                             <div class="col-6">
                                 <div class="form-floating">
                                     Box
-                                    <input name="back_word_box" type="number" class="form-control" id="back_word_box" value="{{ word_info.box }}" disabled>
+                                    <input name="box" type="number" class="form-control" id="back_word_box" value="{{ word_info.box }}" disabled>
                                     <label for="back_word_box"></label>
                                 </div>
                             </div>
