--- a/Play_App/templates/Play_App/service.html
+++ b/Play_App/templates/Play_App/service.html
@@ -15,6 +15,10 @@ active
 #backWord {
   visibility: hidden;
 }
+
+.pt-5, .py-5 {
+  padding-top: 2.2rem !important;
+}
 {% endblock style %}
 
 {% block body %}
@@ -31,6 +35,7 @@ active
     <button class="btn btn-outline-primary" style="width: 100px; height: 50px;">Edit</button>
   </a>
   <button class="btn btn-outline-danger" style="width: 100px; height: 50px;" onclick="deleteWord({{ word.id }})">Delete</button>  
+  <p style="font-size: 0.45em;"><span style="color: red;">نکته : </span> قبل از شروع بازی کلمات روز جدید را وارد کنید. زیرا پس از اتمام بازی دسترسی برای ایجاد کلمه جدید ندارید</p>
 </div>
 <div class="container-xxl py-5">
   <div class="container py-5 px-lg-5">
